# simulazione_transazioni

./: .gitignore  CMakeLists.txt  README.md  conf1.sh  config.c  config.h  enum.c  makefile  master  master.c  node.c  structure.h  user.c  utilities.c
configs/: README.md  conf1.sh  conf2.sh  conf3.sh
lib/: README.md  libsem.c  libsem.h
src/: config.c  config.h  enum.c  enum.h  master.c  master.h  node.c  node.h  rwlock.c  rwlock.h  shared_memory.c  shared_memory.h  structure.h  user.c  user.h  utilities.c  utilities.h
